tests/snapshots/run_wpt_conformance__coreml_tan_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
tan.https.any.js tan float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([150, 82, 97, 84, 168, 85, 42, 78, 213, 73, 94, 210, 10, 81, 210, 200, 228, 207, 152, 69, 254, 210, 147, 209, 7, 85, 161, 192, 94, 206, 211, 83, 111, 212, 219, 83, 77, 85, 249, 213, 199, 75, 232, 210, 185, 206, 25, 49]);
  }

  nodes {
    [tanOutput] = tan(operand_0, label="");
  }

  outputs { tanOutput; }
}
