tests/snapshots/run_wpt_conformance__coreml_tan_float16_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "tan.https.any.js",
    "tan float16 5D tensor",
    "coreml",
    "PASS",
)
